--- a/src/app/views/onboarding/pages/onboarding-ingredientpreferences/onboarding-ingredientpreferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-ingredientpreferences/onboarding-ingredientpreferences.component.html
@@ -18,11 +18,11 @@
 		</div>
 		<h1 class="content-prompt">Ingredient Preferences</h1>
 		<div class="slide-options">
-			<ion-slides #ingredientSlides (ionSlideDidChange)="onSlideChange()">
+			<ion-slides #ingredientSlides>
 				<ion-slide *ngFor="let ingredient of ingredientPreferenceOptions; let ingredientIndex = index">
 					<ion-card>
 						<div class="image-wrap">
-							<img src="{{ ingredient.image }}" />
+							<img src="{{ ingredient.image }}" (load)="imageLoaded(ingredient)" [ngClass]="{'loaded': ingredient.loaded }"/>
 						</div>
 						<ion-card-header>
 							<ion-card-title>{{ ingredient.title }}</ion-card-title>
@@ -30,9 +30,9 @@
 						<ion-card-content>
 							<div class="preference-question-group" *ngFor="let question of ingredient.questions; let questionIndex = index" [ngClass]="{'visible': question.active}">
 								<p class="sub-heading">Question {{ questionIndex + 1 }} of {{ ingredient.questions.length }}:</p>
-								<ion-button mode="ios" *ngFor="let option of question.options; let optionIndex = index" (click)="selectPreference(ingredient.id, question.id, option, questionIndex, ingredientIndex, optionIndex)" color="{{ option.selected ? 'secondary' : 'primary'}}" slot="start" id="ingredient-{{ingredient.id}}{{questionIndex}}{{optionIndex}}"><span>{{ option.title }}</span></ion-button>
+								<ion-button mode="ios" *ngFor="let option of question.options; let optionIndex = index" (click)="selectPreference(ingredient.id, question, option, optionIndex, questionIndex, ingredientIndex)" color="{{ option.selected ? 'secondary' : 'primary'}}" slot="start" id="ingredient-{{ingredient.id}}{{questionIndex}}{{optionIndex}}"><span>{{ option.title }}</span></ion-button>
 								<ion-button class="transparent-butt" [ngStyle]="{'display': (ingredientIndex == 0 && questionIndex == 0) ? 'block' : 'none' }" (click)="goBack()"> &#60; Back to Previous Card</ion-button>
-								<ion-button class="transparent-butt" [ngClass]="{'hidden': questionIndex == 0, 'not-display': ingredientIndex == 0 && questionIndex == 0 }" (click)="backToPrevQuestion(questionIndex)"> &#60; Back to Previous Question</ion-button>
+								<ion-button class="transparent-butt" [ngClass]="{'hidden': questionIndex == 0, 'not-display': ingredientIndex == 0 && questionIndex == 0 }" (click)="backToPrevQuestion(questionIndex, ingredientIndex)"> &#60; Back to Previous Question</ion-button>
 							</div>
 						</ion-card-content>
 					</ion-card>
