--- a/src/app/core/components/ingredientmodal/ingredientmodal.component.html
+++ b/src/app/core/components/ingredientmodal/ingredientmodal.component.html
@@ -5,7 +5,7 @@
   <div class="content">
       <p class="header">Ingredients</p>
       <div class="ingredients details-box">
-        <div class="ingredient-item" *ngFor="let ingredient of recipe.ingredients">
+        <div class="ingredient-item" *ngFor="let ingredient of recipe.ingredientsFull">
             <span class="text">{{ ingredient }}</span>
         </div>
       </div>
