--- a/src/app/core/components/recipemodal/recipemodal.component.html
+++ b/src/app/core/components/recipemodal/recipemodal.component.html
@@ -18,7 +18,7 @@
         </div>
         <div class="ingredients details-box">
             <h2>Ingredients</h2>
-            <div class="ingredient-item" *ngFor="let ingredient of recipe.ingredients">
+            <div class="ingredient-item" *ngFor="let ingredient of recipe.ingredientsFull">
                 <span class="text">{{ ingredient }}</span>
             </div>
         </div>
