--- a/src/app/views/mealselection/pages/mealselection-selectmeal/mealselection-selectmeal.component.scss
+++ b/src/app/views/mealselection/pages/mealselection-selectmeal/mealselection-selectmeal.component.scss
@@ -47,11 +47,18 @@ ion-slides {
 
         .image-wrap {
             height: 225px;
+            background: var(--ion-color-disabled);
 
             img {
                 object-fit: cover;
                 width: 100%;
                 height: 100%;
+                opacity: 0;
+                transition: opacity 0.3s;
+
+                &.loaded {
+                    opacity: 1;
+                }
             }
         }
 
