--- a/src/app/views/dashboard/pages/reviews/reviews.component.scss
+++ b/src/app/views/dashboard/pages/reviews/reviews.component.scss
@@ -25,7 +25,9 @@ ion-content {
         width: 100%;
         max-width: 400px;
         margin-bottom: 50px;
-    
+        margin-left: auto;
+        margin-right: auto;
+
         &:last-child {
             margin-bottom: 100px;
         }
