--- a/src/app/views/dashboard/pages/reviews-form/reviews-form.component.html
+++ b/src/app/views/dashboard/pages/reviews-form/reviews-form.component.html
@@ -25,12 +25,12 @@
     <form (ngSubmit)="submitReview()" [formGroup]="reviewForm">
       <ion-card>
         <ion-card-content>
-          <ion-img [src]="iconSrc"></ion-img>
+          <ion-img *ngIf="photo" [src]="photo"></ion-img>
         </ion-card-content>
       </ion-card>
 
       <div class="btn-wrapper">
-        <ion-button mode="ios" color="secondary" class="btn-add-photo">ADD PHOTO</ion-button>
+        <ion-button mode="ios" color="secondary" class="btn-add-photo" (click)="uploadPhoto()">ADD PHOTO</ion-button>
       </div>
 
       <p class="questions" [ngClass]="{'invalid': !this.isReasonValid}">Why did you include this recipe in your meal plan?</p>
