--- a/src/app/views/dashboard/pages/reviews-form/reviews-form.component.html
+++ b/src/app/views/dashboard/pages/reviews-form/reviews-form.component.html
@@ -30,7 +30,7 @@
       </ion-card>
 
       <div class="btn-wrapper">
-        <ion-button mode="ios" color="secondary" class="btn-add-photo" (click)="uploadPhoto()">ADD PHOTO</ion-button>
+        <ion-button mode="ios" color="secondary" class="btn-add-photo" (click)="updatePhotoFrom()">ADD PHOTO</ion-button>
       </div>
 
       <p class="questions" [ngClass]="{'invalid': !this.isReasonValid}">Why did you include this recipe in your meal plan?</p>
