update upload photo

--- a/src/app/views/dashboard/pages/reviews-form/reviews-form.component.html
+++ b/src/app/views/dashboard/pages/reviews-form/reviews-form.component.html
@@ -24,9 +24,7 @@
     
     <form (ngSubmit)="submitReview()" [formGroup]="reviewForm">
       <ion-card>
-        <ion-card-content>
-          <ion-img *ngIf="photo" [src]="photo"></ion-img>
-        </ion-card-content>
+        <ion-img class="photo" *ngIf="photo" [src]="photo.changingThisBreaksApplicationSecurity"></ion-img>
       </ion-card>
 
       <div class="btn-wrapper">
