--- a/src/app/views/dashboard/pages/reviews-form/reviews-form.component.scss
+++ b/src/app/views/dashboard/pages/reviews-form/reviews-form.component.scss
@@ -45,14 +45,14 @@ ion-content {
         background-image: url(../../../../../assets/images/icon-camera.svg);
         background-repeat: no-repeat;
         background-position: center;
-        
-        ion-card-content {
-            margin: 58px 0;
 
-            ion-img {
-                width: 83px;
-                height: 83px;
-                margin: auto;
+        .photo {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+
+            img {
+                border-radius: 8px;
             }
         }
         
