--- a/src/app/views/onboarding/pages/onboarding-numberofmeals/onboarding-numberofmeals.component.scss
+++ b/src/app/views/onboarding/pages/onboarding-numberofmeals/onboarding-numberofmeals.component.scss
@@ -23,7 +23,7 @@ ion-content {
         height: 52px;
         margin: auto 17px;
         background-color: var(--ion-color-input-background);
-        border: 1px solid var(--ion-color-input-border);
+        // border: 1px solid var(--ion-color-input-border);
         text-align: center;
 
         p {
