--- a/src/app/views/dashboard/pages/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/pages/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
             <ion-label>Shopping List</ion-label>
         </ion-tab-button>
         <ion-tab-button tab="reviews" (click)="changeTabs('reviews')">
-            <ion-icon [src]="isReviewsActive ? reviews : reviewsInactive"></ion-icon>
+            <ion-icon [src]="reviews"></ion-icon>
             <div class="review-notification" *ngIf="notReviewedNum > 0">
                 <span>
                     {{ notReviewedNum }}
