add safe-area-inset-top for content-wrapper

--- a/src/global.scss
+++ b/src/global.scss
@@ -355,7 +355,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    margin-top: env(safe-area-inset-top);
+    
     &.row {
         flex-direction: row;
     }
