--- a/src/app/core/components/ingredientmodal/ingredientmodal.component.html
+++ b/src/app/core/components/ingredientmodal/ingredientmodal.component.html
@@ -5,6 +5,7 @@
   <div class="content">
       <p class="header">Ingredients</p>
       <div class="ingredients details-box">
+        <span *ngIf="recipe.ingredientsFull == undefined">MISSING {{ recipe.ingredientsFull }}</span>
         <div class="ingredient-item" *ngFor="let ingredient of recipe.ingredientsFull">
             <span class="text">{{ ingredient }}</span>
         </div>
