add close menu function after logout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ion-app>
-    <ion-menu side="end" type="push" contentId="main" swipe-gesture="false">
+    <ion-menu side="end" type="push" contentId="main" swipe-gesture="false" #sideMenu>
         <ion-content>
-            <ion-list>
+            <ion-list class="safe-top">
                 <ion-item>Meal Plan</ion-item>
                 <ion-item>Shopping List</ion-item>
                 <ion-item>Reviews</ion-item>
