--- a/src/global.scss
+++ b/src/global.scss
@@ -581,6 +581,10 @@ h1 {
 
 }
 
+.safe-top {
+    margin-top: env(safe-area-inset-top, 20px)
+}
+
 /** Font **/
 @font-face {
     font-family: 'robotomedium';
