remove full screen for recipes & shoppinglist

--- a/src/app/views/dashboard/pages/recipes/recipes.component.html
+++ b/src/app/views/dashboard/pages/recipes/recipes.component.html
@@ -14,7 +14,7 @@
         </ion-buttons>
     </ion-toolbar>
   </ion-header>
-<ion-content fullscreen class="has-tabs" [ngClass]="{'loading': isLoading}">
+<ion-content class="has-tabs" [ngClass]="{'loading': isLoading}">
 
     <div class="loading-overlay">
         <ion-spinner name="crescent" color="primary"></ion-spinner>
