--- a/src/app/views/dashboard/pages/shoppinglist/shoppinglist.component.html
+++ b/src/app/views/dashboard/pages/shoppinglist/shoppinglist.component.html
@@ -14,7 +14,7 @@
       </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content fullscreen class="has-tabs">
+<ion-content class="has-tabs">
 
   <div class="content-wrapper column start">
       <h1>Shopping List</h1>
