update meal selector layout

--- a/src/app/views/mealselection/pages/mealselection-selectmeal/mealselection-selectmeal.component.scss
+++ b/src/app/views/mealselection/pages/mealselection-selectmeal/mealselection-selectmeal.component.scss
@@ -106,6 +106,7 @@ ion-slides {
     width: 100%;
     min-height: 120px;
     padding: 20px;
+    display: table;
     //overflow-x: scroll;
     //white-space: nowrap;
 }
