--- a/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.scss
+++ b/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.scss
@@ -36,15 +36,18 @@
     padding-bottom: 5px;
 }
 
-.show-more {
-    span{
-        font-family: var(--font-family-button);
-        font-style: var(--font-style-button);
-        font-weight: var(--font-weight-button);
-        font-size: 14px;
-        line-height: 17px;
-        text-transform: uppercase;
+.show-more span, .prev-question span {
+    font-family: var(--font-family-button);
+    font-style: var(--font-style-button);
+    font-weight: var(--font-weight-button);
+    font-size: 14px;
+    line-height: 17px;
+    text-transform: uppercase;
 
-        color: var(--ion-color-primary);
-    }
+    color: var(--ion-color-primary);
+
+}
+
+.prev-question {
+    text-align: center;
 }
