--- a/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.html
@@ -36,13 +36,14 @@
 								</div>
 							</div>
 							<p class="description-detail">
-								<span class="">
-									<span *ngFor="let ingredient of meal.ingredients; let i = index">
-										{{ ingredient }}<span *ngIf="meal.ingredients.length - 1 > i">, </span>
-									</span>
-								</span>
+								<ion-grid>
+									<ion-row no-padding>							
+										<ion-col size="6" *ngFor="let ingredient of meal.ingredients; let i = index">
+											<span >{{ ingredient }}</span>
+										</ion-col>
+									</ion-row>
+								</ion-grid>
 							</p>
-							<p class="description-detail show-more" ><span (click)="openIngredients(meal)">SHOW DETAILS</span></p>
 							<div class="preference-question-group" *ngFor="let question of meal.questions; let questionIndex = index" [ngClass]="{'visible': question.active}">
 								<p class="sub-heading">Question {{ questionIndex + 1 }} of {{ meal.questions.length }}:</p>
 								<ion-button *ngFor="let option of question.options; let optionIndex = index" [disabled]="question.disabled" (click)="selectPreference(meal.id, question, option, optionIndex, questionIndex, mealIndex)" class="butt-preference" [ngClass]="{'selected': option.selected}" color="{{ option.selected ? 'secondary' : 'primary'}}" slot="start" mode="ios" id="option-{{meal.id}}{{questionIndex}}{{optionIndex}}"><span>{{ option.title }}</span></ion-button>
