--- a/src/app/views/onboarding/pages/onboarding-loadingscreen/onboarding-loadingscreen.component.html
+++ b/src/app/views/onboarding/pages/onboarding-loadingscreen/onboarding-loadingscreen.component.html
@@ -13,8 +13,8 @@
       </div>
 
       <div class="content column start content-prompt">
-          <ion-img [src]="imgSrc" class="complete-image ion-align-self-center"></ion-img>
-          <h1>Just a Second</h1>
+        <ion-img [src]="imgSrc" class="shake animated infinite complete-image ion-align-self-center"></ion-img>
+        <h1>Just a Second</h1>
           <p>Our algorithms are coming up with a few more recipes for you to rate.</p>
       </div>
 
