--- a/src/global.scss
+++ b/src/global.scss
@@ -641,6 +641,51 @@ h1 {
     margin-top: env(safe-area-inset-top, 20px)
 }
 
+/** Animation **/
+.animated {
+    -webkit-animation-duration: 0.5s;
+    animation-duration: 0.5s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+  }
+  .animated.infinite {
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+  }
+  /*the animation definition*/
+  @-webkit-keyframes shake {
+    0%, 50%, 100% {
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0)
+    }
+    25% {
+      -webkit-transform: translate3d(10px, 0, 0);
+      transform: translate3d(10px, 0, 0)
+    }
+    75% {
+      -webkit-transform: translate3d(-10px, 0, 0);
+      transform: translate3d(-10px, 0, 0)
+    }
+  }
+  @keyframes shake {
+    0%, 50%, 100% {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0)
+    }
+    25% {
+        -webkit-transform: translate3d(10px, 0, 0);
+        transform: translate3d(10px, 0, 0)
+    }
+    75% {
+        -webkit-transform: translate3d(-10px, 0, 0);
+        transform: translate3d(-10px, 0, 0)
+    }
+  }
+  .shake {
+    -webkit-animation-name: shake;
+    animation-name: shake;
+  }
+
 /** Font **/
 @font-face {
     font-family: 'robotomedium';
