add animation to complete frypan

--- a/src/app/views/onboarding/pages/onboarding-complete/onboarding-complete.component.html
+++ b/src/app/views/onboarding/pages/onboarding-complete/onboarding-complete.component.html
@@ -13,7 +13,7 @@
       </div>
 
       <div class="content column start content-prompt">
-          <ion-img [src]="imgSrc" class="complete-image ion-align-self-center"></ion-img>
+          <ion-img [src]="imgSrc" class="shake animated infinite complete-image ion-align-self-center"></ion-img>
           <h1>Please wait</h1>
           <p>We are creating a personalised meal plan for you now!</p>
       </div>
