change btn copy after img submitted

--- a/src/app/views/dashboard/pages/reviews-form/reviews-form.component.html
+++ b/src/app/views/dashboard/pages/reviews-form/reviews-form.component.html
@@ -31,7 +31,7 @@
 						color="secondary"
 						class="btn-add-photo"
 						(click)="updatePhotoFrom()"
-						>ADD PHOTO</ion-button
+						>{{ buttonLabel }}</ion-button
 					>
 				</div>
 
