--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
                 </ion-buttons>
             </ion-toolbar>
           </ion-header>
-        <ion-content class="side-menu">
+        <ion-content class="side-menu" no-bounce has-bouncing="false" forceOverscroll="false">
             <ion-list class="safe-top">
                 <ion-item lines="none" (click)="goTo('recipes')"><img src="../../../../../assets/images/icon-recipes.svg">Meal Plan</ion-item>
                 <ion-item lines="none" (click)="goTo('shoppinglist')"><img src="../../../../../assets/images/icon-shopping-list.svg">Shopping List</ion-item>
