--- a/src/app/core/components/incompletereviewmodal/incompletereviewmodal.component.html
+++ b/src/app/core/components/incompletereviewmodal/incompletereviewmodal.component.html
@@ -1,4 +1,4 @@
-<ion-content overflow-scroll="false">
+<ion-content overflow-scroll="false" no-bounce has-bouncing="false" forceOverscroll="false">
   <div class="modal-wrapper">
     <h1>Incomplete Review</h1>
     <p>Please fill out all mandatory information in order to submit your review.</p>
