--- a/src/app/core/components/ingredientmodal/ingredientmodal.component.html
+++ b/src/app/core/components/ingredientmodal/ingredientmodal.component.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content no-bounce has-bouncing="false" forceOverscroll="false">
   <div>
       <img class="butt-close" (click)="closeModal()" src="../../../../assets/images/icon-close-black.svg" />
   </div>
