--- a/src/app/core/components/recipemodal/recipemodal.component.html
+++ b/src/app/core/components/recipemodal/recipemodal.component.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content no-bounce has-bouncing="false" forceOverscroll="false">
     <div class="image-wrap">
         <img src="{{ recipe.image }}" />
         <img class="butt-close" (click)="closeModal()" src="../../../assets/images/icon-close.svg" />
