--- a/src/app/views/dashboard/pages/recipes/recipes.component.html
+++ b/src/app/views/dashboard/pages/recipes/recipes.component.html
@@ -9,7 +9,7 @@
         </ion-buttons>
     </ion-toolbar>
   </ion-header>
-<ion-content fullscreen class="has-tabs" [ngClass]="{'loading': isLoading}">
+<ion-content fullscreen class="has-tabs" [ngClass]="{'loading': isLoading}" no-bounce has-bouncing="false" forceOverscroll="false">
 
     <div class="loading-overlay">
         <ion-spinner name="crescent" color="primary"></ion-spinner>
