--- a/src/app/views/dashboard/pages/shoppinglist/shoppinglist.component.html
+++ b/src/app/views/dashboard/pages/shoppinglist/shoppinglist.component.html
@@ -9,7 +9,7 @@
       </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content class="has-tabs">
+<ion-content class="has-tabs" no-bounce has-bouncing="false" forceOverscroll="false">
 
   <div class="content-wrapper column start">
       <h1>Shopping List</h1>
