--- a/src/app/views/login/login.page.html
+++ b/src/app/views/login/login.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content no-bounce has-bouncing="false" forceOverscroll="false">
 
 	<div class="content-wrapper row">
 		<ion-card class="content-prompt" [ngClass]="{ 'loading': state === 'loading'}">
