--- a/src/app/views/mealselection/pages/mealselection-selectmeal/mealselection-selectmeal.component.html
+++ b/src/app/views/mealselection/pages/mealselection-selectmeal/mealselection-selectmeal.component.html
@@ -6,7 +6,7 @@
         <img class="logo" src="../../../../../assets/images/header-logo.svg">
     </ion-toolbar>
 </ion-header>
-<ion-content fullscreen [ngClass]="{'loading': isLoading}">
+<ion-content fullscreen [ngClass]="{'loading': isLoading}" no-bounce has-bouncing="false" forceOverscroll="false">
 
     <div class="content-wrapper column start">
 
