--- a/src/app/views/plugintester/plugintester.page.html
+++ b/src/app/views/plugintester/plugintester.page.html
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content no-bounce has-bouncing="false" forceOverscroll="false">
 
   <section class="section">
     <h1>Login Firebase User</h1>
