--- a/src/app/views/splash/splash.page.html
+++ b/src/app/views/splash/splash.page.html
@@ -1,7 +1,7 @@
-<ion-content>
+<ion-content no-bounce has-bouncing="false" forceOverscroll="false">
   <div class="vertical-center">
     <div class="center">
-      <ion-img [src]="imgSrc" class="splash-image ion-align-self-end">  
+      <ion-img [src]="imgSrc" class="splash-image ion-align-self-end">
       </ion-img>
       <ion-label>Chef</ion-label>
     </div>
