--- a/src/app/core/components/exitreviewmodal/exitreviewmodal.component.html
+++ b/src/app/core/components/exitreviewmodal/exitreviewmodal.component.html
@@ -1,4 +1,4 @@
-<ion-content overflow-scroll="false">
+<ion-content overflow-scroll="false" no-bounce has-bouncing="false" forceOverscroll="false">
   <div class="modal-wrapper">
     <h1>Exit Review</h1>
     <p>Are you sure you want to exit? Your review hasn’t been submitted. All information will be lost if you choose to exit.</p>
