--- a/src/app/views/dashboard/pages/reviews/reviews.component.html
+++ b/src/app/views/dashboard/pages/reviews/reviews.component.html
@@ -10,7 +10,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content fullscreen class="has-tabs">
+<ion-content fullscreen class="has-tabs" no-bounce has-bouncing="false" forceOverscroll="false">
   <div class="content-wrapper column start">
     <h1>Review</h1>
     <p>Help us suggest more yummy dishes in your next meal plan by completing these reviews.</p>
