--- a/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.html
+++ b/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.html
@@ -6,7 +6,7 @@
         <img class="logo" src="../../../../../assets/images/header-logo.svg">
     </ion-toolbar>
 </ion-header>
-<ion-content fullscreen>
+<ion-content fullscreen no-bounce has-bouncing="false" forceOverscroll="false">
     <div class="content-wrapper column start">
 
         <div class="page-info">
