--- a/src/app/views/onboarding/pages/onboarding-complete/onboarding-complete.component.html
+++ b/src/app/views/onboarding/pages/onboarding-complete/onboarding-complete.component.html
@@ -3,12 +3,12 @@
 
 	</ion-toolbar>
 </ion-header>
-<ion-content fullscreen>
+<ion-content fullscreen no-bounce has-bouncing="false" forceOverscroll="false">
 
   <div class="content-wrapper column start">
 
       <div class="progress">
-        <ion-progress-bar indeterminate color="tertiary" value="1"></ion-progress-bar>
+        <onboarding-progress [showOverall]="false"></onboarding-progress>
         <p class="progress-percentage">On Boarding is Complete!</p>
       </div>
 
