--- a/src/app/views/onboarding/pages/onboarding-ingredientpreferences/onboarding-ingredientpreferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-ingredientpreferences/onboarding-ingredientpreferences.component.html
@@ -6,7 +6,7 @@
 		<img class="logo" src="../../../../../assets/images/header-logo.svg">
 	</ion-toolbar>
 </ion-header>
-<ion-content fullscreen [ngClass]="{'loading': isLoading}">
+<ion-content #scroller fullscreen [ngClass]="{'loading': isLoading}" no-bounce has-bouncing="false" forceOverscroll="false">
 
 	<div class="loading-overlay">
 		<ion-spinner name="crescent" color="primary"></ion-spinner>
@@ -14,9 +14,10 @@
 
 	<div class="content-wrapper column start preferences" *ngIf="!isLoading">
 		<div class="progress">
-            <ion-progress-bar indeterminate color="tertiary" value="{{progressValue/100}}"></ion-progress-bar>
-			<p class="progress-percentage"> {{ percentage }}% Complete</p>
+			<onboarding-progress [showOverall]="false"></onboarding-progress>
+			<div class="total-progress">PART 2: Ingredient Preferences ({{ page }} of {{ ingredientPreferenceOptions?.length }})</div>
 		</div>
+		<div class="meal-nav"><button class="butt-previous" *ngIf="activeSlide > 0" (click)="showPrevIngredient()">< Show previous ingredient</button></div>
 		<h1 class="content-prompt">Ingredient Preferences</h1>
 		<div class="slide-options">
 			<ion-slides #ingredientSlides (ionSlideDidChange)="setPagerNum()" [options]="{ allowTouchMove: false, autoHeight: true }">
@@ -29,18 +30,26 @@
 							<ion-card-title>{{ ingredient.title }}</ion-card-title>
 						</ion-card-header>
 						<ion-card-content>
-							<div class="preference-question-group" *ngFor="let question of ingredient.questions; let questionIndex = index" [ngClass]="{'visible': question.active}">
+							<div class="question-group" *ngFor="let question of ingredient.questions; let questionIndex = index" [ngClass]="{'disabled': question.disabled}">
+								<h2>{{ question.title }}</h2>
+								<div class="question-option-radio" *ngFor="let option of question.options; let optionIndex = index"  (click)="selectPreference(ingredient.id, question, option, optionIndex, questionIndex, ingredientIndex)" [ngClass]="{'selected': option.selected}">
+									<div class="radio"></div>
+									<div class="title">{{ option.title }}</div>
+								</div>
+							</div>
+							<ion-button class="next" (click)="showNextIngredient(ingredientIndex)" [disabled]="disableNext">Next Ingredient</ion-button>
+							<!--<div class="preference-question-group" *ngFor="let question of ingredient.questions; let questionIndex = index" [ngClass]="{'visible': question.active}">
 								<p class="sub-heading">Question {{ questionIndex + 1 }} of {{ ingredient.questions.length }}:</p>
 								<ion-button mode="ios" *ngFor="let option of question.options; let optionIndex = index" [disabled]="question.disabled" (click)="selectPreference(ingredient.id, question, option, optionIndex, questionIndex, ingredientIndex)" color="{{ option.selected ? 'secondary' : 'primary'}}" slot="start" id="ingredient-{{ingredient.id}}{{questionIndex}}{{optionIndex}}"><span>{{ option.title }}</span></ion-button>
 								<ion-button class="transparent-butt" [ngStyle]="{'display': (ingredientIndex == 0 && questionIndex == 0) ? 'block' : 'none' }" (click)="goBack()"> &#60; Back to Previous Card</ion-button>
 								<ion-button class="transparent-butt" [ngClass]="{'hidden': questionIndex == 0, 'not-display': ingredientIndex == 0 && questionIndex == 0 }" (click)="backToPrevQuestion(questionIndex, ingredientIndex)"> &#60; Back to Previous Question</ion-button>
-							</div>
+							</div>-->
 						</ion-card-content>
 					</ion-card>
 				</ion-slide>
 			</ion-slides>
 		</div>
-		<div class="pager">{{ page }} of {{ ingredientPreferenceOptions.length }} ingredients</div>
+		<div class="pager">{{ (ingredientPreferenceOptions.length - page) }} ingredients remaining</div>
 	</div>
 
 </ion-content>
