--- a/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.html
@@ -6,7 +6,7 @@
 		<img class="logo" src="../../../../../assets/images/header-logo.svg">
 	</ion-toolbar>
 </ion-header>
-<ion-content [ngClass]="{'loading': isLoading}">
+<ion-content #scroller [ngClass]="{'loading': isLoading}" no-bounce has-bouncing="false" forceOverscroll="false" force-overscroll="false">
 
 	<div class="loading-overlay">
 		<ion-spinner name="crescent" color="primary"></ion-spinner>
@@ -14,9 +14,10 @@
 
 	<div class="content-wrapper column start preferences" *ngIf="!isLoading">
 		<div class="progress">
-            <ion-progress-bar indeterminate color="tertiary" value="{{progressValue/100}}"></ion-progress-bar>
-            <p class="progress-percentage"> {{progressValue}}% Complete</p>
+			<onboarding-progress [showOverall]="false"></onboarding-progress>
+			<div class="total-progress">PART 1: Meal Preferences ({{ page }} of {{ mealPreferenceOptions?.length }})</div>
 		</div>
+		<div class="meal-nav"><button class="butt-previous" *ngIf="activeSlide > 0" (click)="showPrevMeal()">< Show previous meal</button></div>
 		<h1 class="content-prompt">Meal Preferences</h1>
 		<div class="slide-options">
 			<ion-slides #mealSlides noSwiping (ionSlideDidChange)="setPagerNum()" [options]="{ allowTouchMove: false, autoHeight: true }">
@@ -43,18 +44,27 @@
 								</span>
 							</p>
 							<p class="description-detail show-more" ><span (click)="openIngredients(meal)">SHOW DETAILS</span></p>
-							<div class="preference-question-group" *ngFor="let question of meal.questions; let questionIndex = index" [ngClass]="{'visible': question.active}">
+							<div class="question-group" *ngFor="let question of meal.questions; let questionIndex = index" [ngClass]="{'disabled': question.disabled}">
+								<h2>{{ question.title }}</h2>
+								<div class="question-option-radio" *ngFor="let option of question.options; let optionIndex = index"  (click)="selectPreference(meal.id, question, option, optionIndex, questionIndex, mealIndex)" [ngClass]="{'selected': option.selected}">
+									<div class="radio"></div>
+									<div class="title">{{ option.title }}</div>
+								</div>
+							</div>
+							<ion-button class="next" (click)="showNextMeal(mealIndex)">Next Meal</ion-button>
+
+							<!--<div class="preference-question-group" *ngFor="let question of meal.questions; let questionIndex = index" [ngClass]="{'visible': question.active}">
 								<p class="sub-heading">Question {{ questionIndex + 1 }} of {{ meal.questions.length }}:</p>
 								<ion-button *ngFor="let option of question.options; let optionIndex = index" [disabled]="question.disabled" (click)="selectPreference(meal.id, question, option, optionIndex, questionIndex, mealIndex)" class="butt-preference" [ngClass]="{'selected': option.selected}" color="{{ option.selected ? 'secondary' : 'primary'}}" slot="start" mode="ios" id="option-{{meal.id}}{{questionIndex}}{{optionIndex}}"><span>{{ option.title }}</span></ion-button>
 								<ion-button class="transparent-butt" [ngClass]="{'hidden': questionIndex == 0}" (click)="backToPrevQuestion(questionIndex, mealIndex)"> &#60; Back to Previous Question</ion-button>
 
-							</div>
+							</div>-->
 						</ion-card-content>
 					</ion-card>
 				</ion-slide>
 			</ion-slides>
 		</div>
-		<div class="pager">{{ page }} of {{ mealPreferenceOptions?.length }} meals</div>
+		<div class="pager">{{ (mealPreferenceOptions?.length - page) }} meals remaining</div>
 	</div>
 
 </ion-content>
