--- a/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.scss
+++ b/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.scss
@@ -22,6 +22,11 @@
     line-height: 17px;
 }
 
+.total-progress {
+    font-size: 12px;
+    padding: 15px 0;
+}
+
 .fade {
     height: 2.8em;
     overflow: hidden;
