update background img to food

--- a/src/app/views/onboarding/pages/onboarding-preferences/onboarding-preferences.component.scss
+++ b/src/app/views/onboarding/pages/onboarding-preferences/onboarding-preferences.component.scss
@@ -1,5 +1,5 @@
 ion-content {
-    --background: url(../../../../../assets/images/background-preferences.svg) 0 -10px;
+    --background: url(../../../../../assets/images/background-onboarding-intro.svg) -34px 0px;
 }
 
 .progress {
