add show details button back

--- a/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.scss
+++ b/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.scss
@@ -42,9 +42,9 @@
 }
 
 .show-more span, .prev-question span {
-    font-family: var(--font-family-button);
-    font-style: var(--font-style-button);
-    font-weight: var(--font-weight-button);
+    font-family: var(--font-family-show-more-button);
+    font-style: var(--font-style-show-more-button);
+    font-weight: var(--font-weight-show-more-button);
     font-size: 14px;
     line-height: 17px;
     text-transform: uppercase;
