--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -201,6 +201,11 @@
   --font-style-button: normal;
   --font-weight-button: bold;
 
+  /** show more button font **/
+  --font-family-show-more-button: robotoregular;
+  --font-style-show-more-button: normal;
+  --font-weight-show-more-button: 300;
+
   /** back button font **/
   --font-family-back: robotomedium;
   --font-style-back: normal;
