--- a/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.html
+++ b/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.html
@@ -39,12 +39,13 @@
 							<p class="description-detail">
 								<ion-grid>
 									<ion-row no-padding>							
-										<ion-col size="6" *ngFor="let ingredient of meal.ingredients; let i = index">
-											<span >{{ ingredient }}</span>
+										<ion-col size="6" *ngFor="let ingredient of meal.ingredients; let i = index" [ngClass]="{'not-display': i >= 10}">
+											<span>{{ ingredient }}</span>
 										</ion-col>
 									</ion-row>
 								</ion-grid>
 							</p>
+							<p class="description-detail show-more" ><span (click)="openIngredients(meal)">SHOW MORE</span></p>
 							<div class="question-group" *ngFor="let question of meal.questions; let questionIndex = index" [ngClass]="{'disabled': question.disabled}">
 								<h2>{{ question.title }}</h2>
 								<div class="question-option-radio" *ngFor="let option of question.options; let optionIndex = index"  (click)="selectPreference(meal.id, question, option, optionIndex, questionIndex, mealIndex)" [ngClass]="{'selected': option.selected}">
