--- a/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.scss
+++ b/src/app/views/onboarding/pages/onboarding-mealpreferences/onboarding-mealpreferences.component.scss
@@ -37,8 +37,13 @@
 }
 
 .description-detail {
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+
+    ion-grid, ion-col {
+        padding-left: 0px;
+        padding-right: 0px;
+    }
 }
 
 .show-more span, .prev-question span {
