--- a/src/app/views/mealselection/pages/mealselection-selectmeal/mealselection-selectmeal.component.html
+++ b/src/app/views/mealselection/pages/mealselection-selectmeal/mealselection-selectmeal.component.html
@@ -14,14 +14,15 @@
             <ion-spinner name="crescent" color="primary"></ion-spinner>
         </div>
 
-        <div class="meal-slots">
+        <!--<div class="meal-slots">
             <meal-slot *ngFor="let mealslot of mealSlots" [mealSlot]="mealslot"></meal-slot>
-        </div>
+        </div>-->
 
         <div class="meal-info">
-            <h1 *ngIf="!changeMeal">Select Meal {{ currentMealSlot?.id }}</h1>
+            <!--<h1 *ngIf="!changeMeal">Select Meal {{ currentMealSlot?.id }}</h1>
             <h1 *ngIf="changeMeal">Change Meal {{ currentMealSlot?.id }}</h1>
-            <p>Swipe left to see more options. Tap recipe card for more information.</p>
+            <p>Swipe left to see more options. Tap recipe card for more information.</p>-->
+            <h1>Meal {{ currentMealSlot?.id }}</h1>
         </div>
 
 
@@ -55,8 +56,8 @@
 			</ion-slides>
         </div>
 
-        <ion-button class="butt-continue" mode="ios" *ngIf="!changeMeal" color="primary" [disabled]="!currentMealSlot?.selected" (click)="goToNext()">Continue</ion-button>
-        <ion-button class="butt-continue" mode="ios" *ngIf="changeMeal" color="primary" [disabled]="!currentMealSlot?.selected" (click)="goToSummary()">View Summary</ion-button>
+        <!--<ion-button class="butt-continue" mode="ios" *ngIf="!changeMeal" color="primary" [disabled]="!currentMealSlot?.selected" (click)="goToNext()">Continue</ion-button>
+        <ion-button class="butt-continue" mode="ios" *ngIf="changeMeal" color="primary" [disabled]="!currentMealSlot?.selected" (click)="goToSummary()">View Summary</ion-button>-->
 
     </div>
 
