--- a/src/app/views/mealselection/pages/mealselection-selectmeal/mealselection-selectmeal.component.scss
+++ b/src/app/views/mealselection/pages/mealselection-selectmeal/mealselection-selectmeal.component.scss
@@ -1,3 +1,5 @@
+
+
 .swiper-slide {
 
     .selected-border {
@@ -32,6 +34,12 @@
 
 .meal-info {
     padding: 0 20px;
+    width: 100%;
+
+    h1 {
+        font-size: 36px;
+        text-align: left;
+    }
 
     p {
         margin: 0;
