--- a/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.scss
+++ b/src/app/views/mealselection/pages/mealselection-summary/mealselection-summary.component.scss
@@ -33,6 +33,134 @@ ion-content {
         width: 100%;
         text-align: center;
         padding-bottom: 20px;
+        margin-top: 54px;
+
+        button {
+            width: 87%;
+            height: 37px;
+            border-radius: 50px;
+            background: #64C7FF;
+            font-family: --var(--font-family-body);
+            font-weight: bold;
+            color: white;
+            font-size: 14px;
+            text-transform: uppercase;
+
+            &.disabled {
+                background: #EEEEEE;
+            }
+
+            &:active, &:focus {
+                outline: none;
+            }
+
+        }
+    }
+
+    .meal-selection {
+        width: 100%;
+
+        h2 {
+            font-size: 16px;
+            margin-bottom: 6px;
+        }
+
+        .link {
+            width: 100%;
+            text-align: center;
+            color: #64C7FF;
+            font-size: 12px;
+            font-weight: 600;
+            margin-top: 11px;
+            letter-spacing: -0.03em;
+        }
+
+        .meal-wrap {
+            background: #FEFEFE;
+            border: 1px solid #E3E3E3;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            border-radius: 8px;
+            width: 100%;
+            height: 100px;
+            display: flex;
+            justify-content: flex-start;
+            overflow: hidden;
+
+            .image-wrap {
+                width: 40%;
+                max-width: 200px;
+                height: 100%;
+
+                img {
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            .meal-content {
+                flex: 1;
+                padding-left: 13px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-evenly;
+                padding-right: 13px;
+
+                .title {
+                    font-size: 16px;
+                    margin: 5px 0;
+                }
+
+                .detail {
+                    font-size: 12px;
+                    margin-bottom: 5px;
+
+                    .icon {
+                        width: 18px;
+                        height: 18px;
+                        display: inline-block;
+                        vertical-align: bottom;
+                        margin-right: 5px;
+
+                        &.cooktime {
+                            background: url(../../../../../assets/images/icon-cooktime.svg) center center no-repeat;
+                            background-size: contain;
+                        }
+
+                        &.ingredients {
+                            background: url(../../../../../assets/images/icon-ingredients.svg) center center no-repeat;
+                            background-size: contain;
+                        }
+                    }
+
+                    .link {
+                        margin: 0;
+                        text-align: left;
+                        display: inline-block;
+                        width: auto;
+                    }
+                }
+            }
+
+            &.empty {
+
+                justify-content: center;
+                align-items: center;
+            }
+        }
+
+        ion-button {
+            &.small {
+                --background: transparent;
+
+                &:active, &:hover, &:focus {
+                    --background: transparent!important;
+                    --background-activated: transparent!important;
+                    --background-focused: transparent!important;
+                    --background-hovered: transparent!important;
+                }
+            }
+        }
     }
 
     ion-item {
