added header class

--- a/src/app/core/components/ingredientmodal/ingredientmodal.component.html
+++ b/src/app/core/components/ingredientmodal/ingredientmodal.component.html
@@ -1,5 +1,5 @@
 
-  <div>
+  <div class="close-header">
       <img class="butt-close" (click)="closeModal()" src="../../../../assets/images/icon-close-black.svg" />
   </div>
   <div class="content">
