--- a/src/global.scss
+++ b/src/global.scss
@@ -336,17 +336,27 @@
     }
 
     .guide-modal {
-        margin: 24px;
-        width: 327px;
-        height: 471px;
-
         position: relative;
         top: 50%;
         transform: translateY(-50%);
+        width: 100%;
+        height: 100%;
+
+        .modal-wrapper {
+            width: 327px;
+            max-height: 471px;
+            min-height: 370px;
+            overflow: visible;
+        }
+
+        &.small {
+            .modal-wrapper {
+                height: auto;
+            }
+        }
 
         .content {
             padding: 0 43px;
-
             .header {
                 padding: 12px 0 7px;
                 margin: 18px 0;
