replace logo to spinner

--- a/src/global.scss
+++ b/src/global.scss
@@ -63,6 +63,10 @@
         }
     }
 
+    ion-spinner {
+        --color: #64C7FF;
+    }
+
     ion-slide {
         ion-card {
             max-width: 400px;
